[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harwellxps-vamas-correct"
version = "1.0.0"
description = "Transmission-function correction of XPS spectra in ISO-14976 VAMAS (.vms) files, with an interactive viewer and bulk directory processing."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["XPS", "VAMAS", "CasaXPS", "spectroscopy", "transmission function", "ISO 14976"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core (headless CLI) needs only NumPy. The GUI viewer needs matplotlib + tkinter.
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
gui = ["matplotlib>=3.3"]
test = ["pytest>=7.0"]

[project.scripts]
harwell-xps = "xps_transmission_tool:main"

[project.urls]
Homepage = "https://github.com/your-username/harwellxps-vamas-correct"
Issues = "https://github.com/your-username/harwellxps-vamas-correct/issues"

[tool.setuptools]
py-modules = ["xps_transmission_tool"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
